--- a/tcbackend/src/main/resources/application.properties
+++ b/tcbackend/src/main/resources/application.properties
@@ -2,14 +2,8 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TC_DB
 spring.datasource.username=sa
 spring.datasource.password=password123!@#
-
 debug=true
-
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=create
-
-endpoints.docs.enabled=true
-
 logging.level.root = info
-
-server.servlet-path=/api
+server.servlet.context-path=/api
