added score view, many other changes

--- a/tcbackend/src/main/resources/application.properties
+++ b/tcbackend/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=create
 logging.level.root = info
 server.servlet.context-path=/api
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
