--- a/tcbackend/pom.xml
+++ b/tcbackend/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.0.2.RELEASE</version>
+            <version>LATEST</version>
         </dependency>
 
         <dependency>
